--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -25,15 +25,21 @@ button { cursor: pointer; }
         background-color: transparent;
     }
 
+    &.--btn-large {
+        padding: 0.75rem 1rem;
+    }
+
     &.--btn-transparent {
         background-color: transparent;
     }
 
     &.--btn-primary-alt {
-
         color: var(--primary);
         background-color: #e0f9ff;
+    }
 
+    &.--btn-rounded {
+        border-radius: 10px;
     }
 
     &.--btn-pills {
